--- a/MakeFile
+++ b/MakeFile
@@ -2,11 +2,11 @@
 
 all:
 	go install github.com/fyne-io/fyne-cross@latest
-	go install fyne.io/fyne/v2/cmd/fyne
-	fyne-cross windows -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=1.0.0 -output=hitminer
-	fyne-cross linux   -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=1.0.0 -output=hitminer
-	fyne-cross darwin  -arch=arm64 -icon=./resoure/static/image/favicon.ico -app-id=1.0.0 -output=hitminer
-	fyne-cross darwin  -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=1.0.0 -output=hitminer
+	go install fyne.io/fyne/v2/cmd/fyne@latest
+	fyne-cross windows -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=1.1.0 -app-version=1.1.0 -output=hitminer
+	fyne-cross linux   -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=1.1.0 -app-version=1.1.0 -output=hitminer
+	fyne-cross darwin  -arch=arm64 -icon=./resoure/static/image/favicon.ico -app-id=1.1.0 -app-version=1.1.0 -output=hitminer
+	fyne-cross darwin  -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=1.1.0 -app-version=1.1.0 -output=hitminer
 
 clean:
 	rm -rf ./bin ./fyne-cross
