--- a/MakeFile
+++ b/MakeFile
@@ -3,14 +3,14 @@
 all:
 	go install github.com/fyne-io/fyne-cross@latest
 	go install fyne.io/fyne/v2/cmd/fyne@latest
-	fyne-cross windows -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.0 -output=hitminer
-	fyne-cross linux   -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.0 -output=hitminer
-	fyne-cross darwin  -arch=arm64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.0 -output=hitminer
-	fyne-cross darwin  -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.0 -output=hitminer
+	fyne-cross windows -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.1 -output=hitminer
+	fyne-cross linux   -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.1 -output=hitminer
+	fyne-cross darwin  -arch=arm64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.1 -output=hitminer
+	fyne-cross darwin  -arch=amd64 -icon=./resoure/static/image/favicon.ico -app-id=hitminer.com -app-version=1.2.1 -output=hitminer
 
 build:
 	go install fyne.io/fyne/v2/cmd/fyne@latest
-	fyne install --release --icon=./resoure/static/image/favicon.icon --appId=hitminer.com
+	fyne install --release --icon=./resoure/static/image/favicon.ico --appID=hitminer.com
 
 clean:
 	rm -rf ./bin ./fyne-cross
